# Automated-Time-Table-Generation-System

./: .gitignore  CLASSES_DOCUMENTATION.txt  README.md  generate_seed_data.py  genetic_algorithm.py
backend/: .env.example  .gitignore  DATABASE_DESIGN.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SDS_updated.docx  doc.md  main.py  nuke_db.py  pyproject.toml  requirements.txt  validate_system.py
backend/app/: __init__.py  data_loader.py  models.py
backend/app/core/: config.py  models.py
backend/app/routes/: auth.py  ingestion.py  preferences.py  timetable.py
backend/app/services/: auth_service.py  ga_service.py  ga_service_new.py  ingestion_service.py  ingestion_service_new.py  preference_service.py  preference_service_new.py  scheduling_service.py  timetable_service.py  timetable_service_new.py
backend/instance/: courses.csv  courses.json  faculties.csv  faculties.json  rooms.csv  rooms.json  seed_data.json  seed_data_old.json  seed_data_too_big.json  seed_data_trail.json
backend/instance/templates/: courses.csv  faculty.csv  rooms.csv
backend/migrations/versions/: 002_implement_new_schema.py  7bfe3d34c4a5_increase_password_hash_length_for_scrypt.py  add_allowed_batches_to_rooms.py  c67899263671_initial_migration.py
backend/tests/: conftest.py  test_api.py
course documents/: TestCases_TimetableSystem_v3-2.xlsx
ga/: README.md  __init__.py  algorithm.py  constraints.py  dominance.py  fitness.py  moea.py  operators.py  parallel.py  population.py
schema/: ENV_SETUP.md  REPORT.md  all_years.md  changes_to_ga_schema.md  (+7 more)
(+63 files in other folders)
